# kkachi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE  OPTIMIZER_GUIDE.md  PERFORMANCE_BASELINE.md  PHASE_5_COMPLETE.md  PYTHON_EXAMPLES.md  QUICK_START.md  README.md  REASON_MULTILINE_BUG.md  REGRESSION_TESTING.md  SUMMARY.md  TEST_REPORT.md  TEST_SUMMARY.md  deny.toml  test_apillm_callable.py
.github/workflows/: ci.yml  publish-crates.yml  publish-python.yml  release.yml  security.yml
benches/: Cargo.toml  cache_benchmark.rs  performance.rs
crates/kkachi/: Cargo.toml
crates/kkachi-cache/: Cargo.toml
crates/kkachi-cache/src/: disk.rs  key.rs  lib.rs  memory.rs
crates/kkachi-cache/tests/: integration_cache.rs
crates/kkachi-cli/: Cargo.toml
crates/kkachi-cli/src/: main.rs
crates/kkachi-cli/src/repl/: completer.rs  engine.rs  mod.rs  pipeline.rs  prompt.rs  state.rs
crates/kkachi-cli/src/repl/commands/: execute.rs  help.rs  history.rs  hitl_cmd.rs  io.rs  mod.rs  model.rs  module.rs  pipeline_cmd.rs  store_cmd.rs
crates/kkachi-client/: Cargo.toml
crates/kkachi-client/src/: lib.rs  lm.rs  pool.rs  provider.rs  request.rs  response.rs
crates/kkachi-eval/: Cargo.toml
crates/kkachi-eval/src/: evaluator.rs  lib.rs  metric.rs  parallel.rs
crates/kkachi-eval/tests/: integration_evaluation.rs
crates/kkachi-python/: Cargo.toml  README.md  pyproject.toml  refactor_builders.py  revert_consuming_pattern.py  test_api_fixes.py  test_fuelix_connection.py  test_fuelix_openai_format.py  test_nested_executor_bug.py  test_real_api.py
crates/kkachi-python/examples/: cli_validator_dspy.py  combined_workflow.py  jinja_formatter.py  jinja_template.py  llm_optimizations.py  memory_persist.py
crates/kkachi-python/python/kkachi/: __init__.py  _kkachi.pyi
crates/kkachi-python/src/: builder.rs  checks.rs  compose.rs  critic.rs  defaults.rs  dspy.rs  error.rs  evaluate_py.rs  jinja.rs  lib.rs  llm.rs  optimize_py.rs  pareto_py.rs  pipeline_py.rs  rewrite.rs  semantic.rs  similarity.rs  skill.rs  step_def.rs  template.rs  types.rs  validator.rs
crates/kkachi-python/tests/: test_cli_fuzz.py  test_cli_standalone.py  test_cli_validator.py  test_integration.py  test_jinja.py  test_memory_api.py  test_memory_edge_cases.py  test_memory_integration.py  test_memory_package.py  test_memory_persist.py  test_phase4.py  test_reason.py  test_retry_block_on.py  test_skill.py
crates/kkachi-refine/: Cargo.toml
crates/kkachi-refine/src/: builder.rs  codegen.rs  lib.rs
crates/kkachi-wasm/: Cargo.toml
crates/kkachi-wasm/src/: lib.rs
crates/kkachi/benches/: llm_benchmarks.rs
crates/kkachi/examples/: cli_recursive_optimization.rs  dspy_declarative_pipeline.rs  dspy_declarative_pipeline.rs.disabled  pulumi_declarative.rs  pulumi_gcs_rag_optimizer.rs  pulumi_infrastructure_pipeline.rs  rag_recursive_pipeline.rs  rag_recursive_simple.rs
crates/kkachi/src/: bootstrap.rs  buffer.rs  compiled.rs  composable.rs  error.rs  evaluate.rs  example.rs  executor.rs  field.rs  intern.rs  lib.rs  metric.rs  module.rs  optimizer.rs  predict.rs  prediction.rs  recall_precision.rs  signature.rs  str_view.rs  typed_adapter.rs  typed_sig.rs  types.rs
crates/kkachi/src/adapter/: chat.rs  json.rs  mod.rs  xml.rs
crates/kkachi/src/assertion/: mod.rs
crates/kkachi/src/dag/: combinators.rs  graph.rs  mod.rs  node.rs
crates/kkachi/src/declarative/: doc_template.rs  jinja.rs  mod.rs  oneshot.rs  pipeline.rs  rag.rs  rag_optimizer.rs  steps.rs
crates/kkachi/src/diff/: mod.rs  render.rs  structured.rs
crates/kkachi/src/hitl/: config.rs  mod.rs  review.rs  reviewer.rs  terminal.rs
crates/kkachi/src/modules/: best_of_n.rs  chain_of_thought.rs  mod.rs  multi_chain.rs  program_of_thought.rs  react.rs  refine.rs
crates/kkachi/src/optimizers/: copro.rs  ensemble.rs  knn.rs  labeled.rs  mipro.rs  mod.rs  simba.rs
crates/kkachi/src/recursive/: agent.rs  api.rs  api_client.rs  best_of.rs  boxed.rs  cache.rs  chain.rs  checks.rs  chunk.rs  cli.rs  cluster.rs  compose.rs  concurrent.rs  condense.rs  conversation.rs  criterion.rs  critic.rs  defaults.rs  engine.rs  ensemble.rs  executor.rs  formatter.rs  input.rs  keywords.rs  llm.rs  memory.rs  mod.rs  module.rs  optimize.rs  packager.rs  pareto.rs  pipeline.rs  prelude.rs  program.rs  rate_limit.rs  reason.rs  refine.rs  result.rs  retrieve.rs  retry.rs  (+15 more)
crates/kkachi/tests/: e2e_training_pipeline.rs  effectiveness_real_llm.rs  fuzz_parsers.rs  fuzz_retry.rs  fuzz_upsert.rs  fuzz_validators.rs  integration_adapters.rs  integration_api.rs  integration_assertions.rs  integration_block_on.rs  integration_duckdb_vector_store.rs  integration_executor.rs  integration_full_pipeline.rs  integration_packager.rs  integration_predict.rs  integration_rag.rs  integration_recursive_storage.rs  integration_signature.rs  integration_similarity.rs  integration_skill.rs  integration_template.rs  integration_training.rs  optimizer_integration.rs  security_packager.rs
examples/: Cargo.toml  README.md  automated_optimization_pipeline.rs  basic_usage.rs  best_of.rs  cli_driven_pipeline.rs  cli_recursive_optimization.rs  complete_dspy_pipeline.rs  continuous_learning.rs  declarative_api.rs  dspy_declarative_pipeline.rs  ensemble.rs  fan_out.rs  optimize.rs  pareto.rs  production_pipeline.rs  pulumi_declarative.rs  pulumi_gcs_rag_optimizer.rs  pulumi_table_pipeline.rs  rag_recursive_pipeline.rs  rag_recursive_simple.rs  rate_limit.rs  reason.rs  refine.rs  repl_hitl_demo.rs  template_persistent_pipeline.rs  template_rag_cli_pipeline.rs  template_refinement.rs  validators.rs  yaml_config_pipeline.rs
examples/output/: code_generation_report.md
examples/python/: _pipeline_common.py  api_llm_basic.py  best_of.py  ensemble.py  pulumi_cli_validator_test.py  pulumi_table_pipeline.py  pulumi_template_pipeline.py  pulumi_tree_pipeline.py  reason.py  refine.py
examples/templates/: api_documentation.md  config_generator.md  pulumi_generator.md  rust_code_generator.md
