[workspace]
members = [
    "crates/kkachi",
    "crates/kkachi-python",
    "benches",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["lituus-io <spicyzhug@gmail.com>"]
# license-file is set per-crate (not supported in workspace.package)
repository = "https://github.com/lituus-io/kkachi"
homepage = "https://github.com/lituus-io/kkachi"
documentation = "https://docs.rs/kkachi"
keywords = ["llm", "optimization", "prompt-engineering", "dspy", "ai"]
categories = ["development-tools", "text-processing", "asynchronous"]
description = "High-performance, zero-copy library for optimizing language model prompts and programs"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"

# Zero-copy
memmap2 = "0.9"
bytes = "1.5"
smallvec = { version = "1.13", features = ["const_generics", "union", "serde"] }
bumpalo = { version = "3.14", features = ["collections"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# HTTP client (use rustls-tls instead of default-tls for better manylinux compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Caching
lru = "0.12"
dashmap = "6.1"

# String interning
string-interner = { version = "0.17", features = ["serde"] }

# Storage
# Use bundled DuckDB (compiles from source, no system install needed)
duckdb = { version = "=1.4.3", features = ["bundled"] }
blake3 = "1.5"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Evaluation
ordered-float = "4.2"
regex = "1.10"
fixedbitset = "0.5"

# Diff and terminal rendering
similar = "2.4"
console = "0.15"

# Templating
minijinja = { version = "2", features = ["loader"] }

# Tokenization
tiktoken-rs = "0.6"
tokenizers = "0.21"
text-splitter = { version = "0.18", default-features = false }

# ONNX Runtime (for embeddings)
ort = "2.0.0-rc.11"
ndarray = "0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
criterion = "0.5"
proptest = "1.5"
tempfile = "3.10"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
debug = true
