[package]
name = "kkachi-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kkachi = { path = "../crates/kkachi" }
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "performance"
path = "performance.rs"
harness = false

[[bench]]
name = "cache_benchmark"
path = "cache_benchmark.rs"
harness = false
