[workspace]

[package]
name = "kkachi-examples"
version = "0.1.0"
edition = "2021"
publish = false

# Examples demonstrating the kkachi recursive refinement API.

[[example]]
name = "declarative_api"
path = "declarative_api.rs"

[[example]]
name = "cli_driven_pipeline"
path = "cli_driven_pipeline.rs"

[[example]]
name = "continuous_learning"
path = "continuous_learning.rs"

[[example]]
name = "cli_recursive_optimization"
path = "cli_recursive_optimization.rs"

[[example]]
name = "dspy_declarative_pipeline"
path = "dspy_declarative_pipeline.rs"

[[example]]
name = "pulumi_declarative"
path = "pulumi_declarative.rs"

[[example]]
name = "pulumi_gcs_rag_optimizer"
path = "pulumi_gcs_rag_optimizer.rs"

[[example]]
name = "rag_recursive_pipeline"
path = "rag_recursive_pipeline.rs"

[[example]]
name = "rag_recursive_simple"
path = "rag_recursive_simple.rs"

[features]
default = []
storage = ["kkachi/storage"]
storage-bundled = ["kkachi/storage-bundled"]

[dependencies]
kkachi = { path = "../crates/kkachi" }
tokio = { version = "1.41", features = ["full", "macros"] }
anyhow = "1.0"
