[package]
name = "kkachi-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Caching layer for the Kkachi LLM optimization library"

[dependencies]
kkachi = { path = "../kkachi" }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
bincode = { workspace = true }

[features]
default = ["disk"]
disk = []
