[package]
name = "kkachi-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LM client abstraction for the Kkachi optimization library"

[dependencies]
kkachi = { path = "../kkachi" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
