[package]
name = "kkachi-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation framework for the Kkachi LLM optimization library"

[dependencies]
kkachi = { path = "../kkachi" }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
