[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kkachi"
version = "0.1.0"
description = "High-performance LLM prompt optimization library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "lituus-io", email = "spicyzhug@gmail.com" }
]
keywords = ["llm", "optimization", "dspy", "prompting", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/lituus-io/kkachi"
Repository = "https://github.com/lituus-io/kkachi"
Documentation = "https://docs.rs/kkachi"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kkachi._kkachi"
