[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kkachi"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "terekete", email = "spicyzhug@gmail.com" }
]
description = "High-performance LLM prompt optimization library"
readme = "README.md"
keywords = ["llm", "optimization", "dspy", "prompting", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/lituus-io/kkachi"
Repository = "https://github.com/lituus-io/kkachi"
Documentation = "https://docs.rs/kkachi"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kkachi._kkachi"
