[package]
name = "kkachi-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the Kkachi LLM optimization library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Note: kkachi dependency is disabled for WASM builds since most features
# (tokio, rayon, mmap) are not WASM-compatible. WASM bindings provide a
# minimal standalone implementation. Enable when WASM-compatible async
# runtime integration is needed.
# kkachi = { path = "../kkachi", default-features = false, features = ["std", "wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to avoid bulk memory operation errors
# Modern browsers support bulk memory, but wasm-opt needs explicit flag
wasm-opt = false

[features]
default = []
